@@ -401,3 +401,7 @@ Thu Apr 10 17:54:19 2003                        Michael Jennings (mej)
 
 Docs for some of the .c files.
 ----------------------------------------------------------------------
+Fri Apr 11 17:10:15 2003                        Michael Jennings (mej)
+
+Completed documentation of the memory management system.
+----------------------------------------------------------------------
